--- a/home/home.css
+++ b/home/home.css
@@ -3,6 +3,15 @@ body {
   /* color: white; */
 }
 
+h5 {
+  padding-top: 10px;
+}
+
+img {
+  width: 225px;
+  height: 319px;
+}
+
 #nav-bar {
   background-color: #efd676;
   height: 70px;
